# teal

./: Cargo.toml  LICENSE  teal.rs  teal.toml
brushes/: 12x12.exr  8x8.exr
teal-base/: Cargo.toml
teal-base/src/: gui.rs  image.rs  lib.rs  pixel.rs
teal-data/: Cargo.toml
teal-data/src/: gui.rs  lib.rs  pixel.rs
teal-gui/: Cargo.toml
teal-gui/src/: lib.rs
teal-main/: Cargo.toml
teal-main/src/: command.rs  config.rs  lib.rs
teal-ops/: Cargo.toml
teal-ops/src/: lib.rs
teal-window/: Cargo.toml
teal-window/src/: lib.rs
