[workspace]
members = [
    "teal-base",
    "teal-main",
    "teal-ops",
    "teal-gui",
]

[package]
name = "teal"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "teal"
path = "teal.rs"

[dependencies]
teal-main = { path = "./teal-main" }
teal-gui = { path = "./teal-gui" }
toml = "0.8.12"
clap = { version = "4.5.4", features = ["derive"] }
